--- a/css/agency.css
+++ b/css/agency.css
@@ -11,6 +11,7 @@ body {
 
 p {
   line-height: 1.75;
+  font-family: 'Frank Ruhl Libre', serif;
 }
 
 a {
@@ -31,8 +32,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 700;
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-weight: 400;
+  /*font-family: Roboto, 'Helvetica Neue', 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
+font-family: 'Frank Ruhl Libre', serif;
 }
 
 section {
@@ -56,7 +58,7 @@ section h3.section-subheading {
 
 @media (min-width: 768px) {
   section {
-    padding: 150px 0;
+    padding: 100px 0;
   }
 }
 
@@ -108,8 +110,17 @@ img::-moz-selection {
   background: transparent;
 }
 
+.header-school {
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 50px;
+  margin-bottom: 25px;
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+
+}
 #mainNav {
-  background-color: #212529;
+  background-color: #fed136;
+
 }
 
 #mainNav .navbar-toggler {
@@ -133,7 +144,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
-  font-size: 90%;
+  font-size: 20px;
   font-weight: 400;
   padding: 0.75em 0;
   letter-spacing: 1px;
@@ -142,7 +153,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #fed136;
+  color: #000;
 }
 
 @media (min-width: 992px) {
@@ -160,14 +171,15 @@ img::-moz-selection {
     transition: all 0.3s;
   }
   #mainNav .navbar-nav .nav-item .nav-link {
-    padding: 1.1em 1em !important;
+    padding:0.5em 1em !important;
   }
   #mainNav.navbar-shrink {
     padding-top: 0;
     padding-bottom: 0;
-    background-color: #212529;
+    background-color: #fed136;
   }
   #mainNav.navbar-shrink .navbar-brand {
+    color: #212529;
     font-size: 1.25em;
     padding: 12px 0;
   }
@@ -176,11 +188,13 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header.jpg");
+  background-image: url("../img/portfolio/DSC_8838_1.JPG");
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
+/*  background-position: center center*/;
   background-size: cover;
+    height: 759px;
+  width: 100%;
 }
 
 header.masthead .intro-text {
